--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
                 <title></title>
                 <meta name="viewport" content="width=device-width, initial-scale=1"/>
                 <meta charset="utf-8"/>
-                <script type="appliction/ld+json">
+                <script type="application/ld+json">
 {
         "@context": "https://schema.org",
         "@type": "FAQPage",
@@ -69,7 +69,7 @@
         ]
 }
                 </script>
-                <script type="appliction/ld+json">
+                <script type="application/ld+json">
 {
         "@context": "https://schema.org",
         "@type": "HowTo",
